# cei-tom-dataset

./: README.md  REPO_STRUCTURE.md  pyproject.toml
data/gold/: project-13_anne-duncan-deflection-misdirection_-at-2025-12-07-21-15-b32f81aa.json  project-14_tiffanie-deflection-misdirection_-at-2025-12-07-22-50-c8d43bb7.json  project-15_kirill-deflection-misdirection_at-2025-12-07-13-33-d7c44bd6.json  project-16_anna-mixed-signals_at-2025-12-08-04-24-2841df6f.json  project-17-peter-mixed-signals_at-2025-12-07-19-41-54b48278.json  project-18_abhigya-mixed-signals_at-2025-12-08-03-01-59e2979a.json  project-20_eli-passive-aggression_at-2025-12-08-01-16-d6ab1c16.json  project-21_godwin-passive-aggression_at-2025-12-07-13-34-9f9dfd99.json  project-22_hannah-sarcasm-irony_at-2025-12-08-04-22-3c746407.json  project-23_andre-sarcasm-irony-at-2025-12-07-19-40-cc032f45.json  project-24_gwen-sarcasm-irony_at-2025-12-08-04-19-de07973b.json  project-25_morty-strategic-politeness-at-2025-12-08-01-18-4ed42e46.json  project-26_wisdom-strategic-politeness_-at-2025-12-07-13-35-7dd50846.json  project-27_mous-strategic-politeness_at-2025-12-08-07-02-14829172.json  project-28_adrian-passive-aggression_-at-2025-12-07-21-14-9d7f54cc.json
data/processed/: cei_benchmark.csv  cei_benchmark.json
data/qa_reports/: agreement_metrics.json  all_quality_reports.json  annotator_reports.json  confusion_matrix.json  file_reports.json  issues_summary.json  review_queue.json  run_metadata.json  sampling_plan.json
docs/: annotation_guidelines.md  evaluation_protocol.md  qa_pipeline.md
examples/: compute_statistics.py  load_dataset.py  run_qa_pipeline.py
scripts/: generate_benchmark.py
src/cei_quality/: __init__.py  cli.py  comprehensive_report.py  config.py  differentiation.py  loaders.py  models.py  pipeline.py  review_report.py  sampling.py  scoring.py
src/cei_quality/validators/: __init__.py  agreement.py  consistency.py  plausibility.py  schema.py
