[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cei-quality"
version = "1.0.0"
description = "Quality control pipeline for the CEI Benchmark dataset"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anonymous" }
]
keywords = [
    "nlp",
    "emotion-recognition",
    "annotation-quality",
    "inter-annotator-agreement",
    "benchmark",
    "pragmatics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
cei-quality = "cei_quality.cli:main"

[project.urls]
Repository = "https://anonymous.4open.science/r/<<ANON_REPO_ID>>"

[tool.hatch.build.targets.wheel]
packages = ["src/cei_quality"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/data",
    "/examples",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
